<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".Activity8"
    android:orientation="vertical">

    <include layout="@layout/toolbar_activitati"></include>

    <LinearLayout
        android:id="@+id/act8_Ll1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/act8_intrebare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:padding="16dp"
            android:text="@string/act8_intrebareText"
            android:textSize="18sp" />



        <EditText
            android:id="@+id/act8_inputIntrebare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:gravity="top|start"
            android:hint="@string/act8_IntrebareHint"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:text="@string/act8_IntrebareEdit"
            android:textSize="17sp"
            tools:text="@string/act8_IntrebareEdit"
            android:padding="15dp" />

        <LinearLayout
            android:id="@+id/act8_Ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/act8_corectTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act8_Corect"
                android:textSize="15sp" />

            <Space
                android:id="@+id/act8_space1"
                android:layout_width="120dp"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/act8_raspunsuriTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act8_raspunsuri"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/act8_Ll3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/act8_Ll4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/act8_RCorectchkb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />

                <Space
                    android:id="@+id/act8_space2"
                    android:layout_width="20dp"
                    android:layout_height="5dp" />

                <EditText
                    android:id="@+id/act8_raspunsEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:hint="@string/act8_raspunsHint"
                    android:inputType="text"
                    android:text="@string/act8_raspuns"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/act8_Ll5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/act8_RCorectchb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false" />

                <Space
                    android:id="@+id/act8_space3"
                    android:layout_width="20dp"
                    android:layout_height="5dp" />

                <EditText
                    android:id="@+id/act8_raspunsEdit1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:inputType="textMultiLine"
                    android:text="@string/act8_raspuns1"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/act8_Ll6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/act8_rCorectchb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="5dp" />

                <EditText
                    android:id="@+id/act8_raspunsEdit2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:inputType="textMultiLine"
                    android:text="@string/act8_raspuns2"
                    android:textAlignment="textEnd" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/act8_Ll7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/act8_Ll8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/act8_switchTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/act8_activeazaTimpul" />

                <Switch
                    android:id="@+id/act8_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/act8_Ll9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/act8_Ll10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/act8_adauga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/act8_adaugaRaspunsuri"
                        android:onClick="act8_adaugaClick"/>

                    <Space
                        android:id="@+id/act8_space4"
                        android:layout_width="30dp"
                        android:layout_height="5dp" />

                    <Button
                        android:id="@+id/act8_sterge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/act8_stergeRaspunsuri"
                        android:onClick="act8_stergeClick"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/act8_Ll11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/act8_salveaza"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/act8_salveazaTxt"
                        android:onClick="act8_salveazaClick"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout >