<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".Activity7"
    android:orientation="vertical">

    <include layout="@layout/toolbar_activitati"></include>

    <LinearLayout
        android:id="@+id/act7_Ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="20dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/act7_txNota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act7_txtNota"
            android:textSize="18sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/act7_Nota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/act7_nNota"
            android:textSize="18sp"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/act7_Ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/act7_Punctaj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/act7_txtPunctaj"
            android:textSize="18sp" />

        <RatingBar
            android:id="@+id/act7_RezultatTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/act7_Ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/act7_IntrebariGresite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:text="@string/act7_IntrGresiteTxt"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/act7_nrIntrG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act7_nrIntr"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>