<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity10">

    <include layout="@layout/toolbar_activitati"></include>

    <ImageButton
        android:id="@+id/act10_creeazaImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="129dp"
        app:srcCompat="@drawable/create" />


    <TextView
        android:id="@+id/act10_creeazaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-165dp"
        android:layout_marginTop="154dp"
        android:layout_toEndOf="@+id/act10_testelemeleImgBtn"
        android:text="@string/act10_creeazaTest"
        android:textStyle="bold" />


    <ImageButton
        android:id="@+id/act10_modificaImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/act10_testelemeleImgBtn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="57dp"
        app:srcCompat="@drawable/modifica" />

    <ImageButton
        android:id="@+id/act10_testelemeleImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/act10_stergeImgBtn"
        android:layout_alignTop="@+id/act10_creeazaImgBtn"
        app:srcCompat="@drawable/testelemele" />

    <ImageButton
        android:id="@+id/act10_stergeImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="192dp"
        app:srcCompat="@drawable/delete" />

    <TextView
        android:id="@+id/act10_modificaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/act10_testeleMeleText"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="92dp"
        android:text="@string/act10_modificaTV"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/act10_testeleMeleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/act10_stergeText"
        android:layout_alignTop="@+id/act10_creeazaText"
        android:text="@string/act10_testeleMeleTv"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/act10_stergeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="223dp"
        android:text="@string/act10_stergeTV"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/act10_Testespinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/act10_stergeImgBtn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="1dp"
        android:entries="@array/act10_listaTeste"
        android:spinnerMode="dialog"
        android:prompt="@string/act10_hintListaTeste"/>


</RelativeLayout>