<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin">

    <include layout="@layout/toolbar_activitati"></include>

    <TextView
        android:id="@+id/act1_parolaTV"
        android:layout_width="114dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/act1_parolaText"
        android:textSize="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/act1_userTV"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/act1_userTV"
        app:layout_constraintTop_toBottomOf="@+id/act1_userTV"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/act1_userTV"
        android:layout_width="114dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/act1_userTv"
        android:textSize="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <EditText
        android:id="@+id/act1_user"
        android:layout_width="171dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/act1_nameText"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/act1_userTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/act1_userTV"
        app:layout_constraintTop_toTopOf="@+id/act1_userTV"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/act1_parola"
        android:layout_width="171dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/act1_parolaET"
        android:inputType="numberPassword"
        app:layout_constraintBottom_toBottomOf="@+id/act1_parolaTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/act1_parolaTV"
        app:layout_constraintTop_toTopOf="@+id/act1_parolaTV"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/act1_btnLogin"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/act1_loginText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act1_parolaTV"
        app:layout_constraintVertical_bias="0.136" />

    <Button
        android:id="@+id/act1_btnRegister"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/act1_registerText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.677"
        app:layout_constraintStart_toEndOf="@+id/act1_btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/act1_parola"
        app:layout_constraintVertical_bias="0.14" />

    <Button
        android:id="@+id/act1_btnRecuperareParola"
        android:layout_width="119dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"

        android:text="@string/act1_recuperareParolaText"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act1_btnLogin"
        app:layout_constraintVertical_bias="0.082" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="174dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/act1_btnRecuperareParola"
        app:srcCompat="@drawable/loginom" />

</android.support.constraint.ConstraintLayout>